--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "tsconfig.json": "^1.0.11",
+    "tsx": "^3.12.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4"
   }
 }
