--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/joy": "^5.0.0-alpha.76",
+    "@mui/material": "^5.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "tsconfig.json": "^1.0.11",
     "tsx": "^3.12.6",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,6 +45,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.21.4"
+    "@babel/preset-typescript": "^7.21.4",
+    "html-webpack-plugin": "^5.5.1",
+    "webpack": "^5.80.0",
+    "webpack-dev-server": "^4.13.3"
   }
 }
